--- a/cxprint.html
+++ b/cxprint.html
@@ -931,6 +931,10 @@ function main() {
     title="cxprint(xpos: int; args: varargs[untyped])"><wbr />cxprint<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxprintLn.t%2Cint%2Cvarargs%5Buntyped%5D"
     title="cxprintLn(xpos: int; args: varargs[untyped])"><wbr />cxprint<wbr />Ln<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxwrite.t%2Cvarargs%5Buntyped%5D"
+    title="cxwrite(args: varargs[untyped])"><wbr />cxwrite<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxwriteLn.t%2Cvarargs%5Buntyped%5D"
+    title="cxwriteLn(args: varargs[untyped])"><wbr />cxwrite<wbr />Ln<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#dprint.t%2CT"
     title="dprint[T](s: T)"><wbr />dprint<span class="attachedType"></span></a></li>
 
@@ -952,7 +956,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-06-06
+Latest      : 2019-06-10
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1523,6 +1527,27 @@ forward declaration
           <span class="Identifier">truetomato</span><span class="Punctuation">,</span><span class="Identifier">bgwhite</span><span class="Punctuation">,</span><span class="Identifier">styleBlink</span><span class="Punctuation">,</span><span class="Identifier">styleBright</span><span class="Punctuation">,</span><span class="StringLit">&quot; Oooh, it blinks too  ! &quot;</span><span class="Punctuation">)</span></pre>
 
 </dd>
+<a id="cxwrite.t,varargs[untyped]"></a>
+<dt><pre><span class="Keyword">template</span> <a href="#cxwrite.t%2Cvarargs%5Buntyped%5D"><span class="Identifier">cxwrite</span></a><span class="Other">(</span><span class="Identifier">args</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dd>
+
+<p>cxwrite</p>
+<p>Calls styledWrite with args given</p>
+<p>Backgroundcolors defined in cxconsts.nim colorNames can be used , that is any color ending with xxxxxxbg  like pastelpinkbg</p>
+<p>x positioning    via cxpos(x) x,y positioning  via cxPosxy(x,y) </p>
+
+
+</dd>
+<a id="cxwriteLn.t,varargs[untyped]"></a>
+<dt><pre><span class="Keyword">template</span> <a href="#cxwriteLn.t%2Cvarargs%5Buntyped%5D"><span class="Identifier">cxwriteLn</span></a><span class="Other">(</span><span class="Identifier">args</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dd>
+
+<p>cxwriteLn</p>
+<p>Calls styledWriteLine with args given</p>
+<p>Backgroundcolors defined in cxconsts.nim colorNames can be used , that is any color ending with xxxxxxbg  like pastelpinkbg </p>
+
+
+</dd>
 <a id="dprint.t,T"></a>
 <dt><pre><span class="Keyword">template</span> <a href="#dprint.t%2CT"><span class="Identifier">dprint</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
@@ -1543,7 +1568,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-06-10 03:49:58 UTC</small>
+        <small>Made with Nim. Generated: 2019-06-11 13:35:52 UTC</small>
       </div>
     </div>
   </div>
