--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -955,7 +955,9 @@ function main() {
 <dd>
 
 <p>cxPortCheck</p>
-<p>runs a linux system command to see what the ports are listening to</p>
+<p>shows the list of all network connections which are</p>
+<p>listening and established.</p>
+<p>This runs a linux system command to see what the ports are listening to</p>
 <p>if no or partial output at all run your program with sudo </p>
 
 
@@ -1065,7 +1067,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-06-11 13:35:49 UTC</small>
+        <small>Made with Nim. Generated: 2019-06-13 05:42:57 UTC</small>
       </div>
     </div>
   </div>
