--- a/cxprint.html
+++ b/cxprint.html
@@ -929,6 +929,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxprint.t%2Cint%2Cvarargs%5Buntyped%5D"
     title="cxprint(xpos: int; args: varargs[untyped])"><wbr />cxprint<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxprintxy.t%2Cint%2Cint%2Cvarargs%5Buntyped%5D"
+    title="cxprintxy(xpos: int; ypos: int; args: varargs[untyped])"><wbr />cxprintxy<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxprintLn.t%2Cint%2Cvarargs%5Buntyped%5D"
     title="cxprintLn(xpos: int; args: varargs[untyped])"><wbr />cxprint<wbr />Ln<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxwrite.t%2Cvarargs%5Buntyped%5D"
@@ -1512,6 +1514,15 @@ forward declaration
 
 
 </dd>
+<a id="cxprintxy.t,int,int,varargs[untyped]"></a>
+<dt><pre><span class="Keyword">template</span> <a href="#cxprintxy.t%2Cint%2Cint%2Cvarargs%5Buntyped%5D"><span class="Identifier">cxprintxy</span></a><span class="Other">(</span><span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">ypos</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">args</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dd>
+
+<p>cxprint xpos : x position ypos : y position starting from 0,0 Calls styledWrite with args given</p>
+<p>Backgroundcolors defined in cxconsts.nim colorNames can be used , that is any color ending with xxxxxxbg  like pastelpinkbg </p>
+
+
+</dd>
 <a id="cxprintLn.t,int,varargs[untyped]"></a>
 <dt><pre><span class="Keyword">template</span> <a href="#cxprintLn.t%2Cint%2Cvarargs%5Buntyped%5D"><span class="Identifier">cxprintLn</span></a><span class="Other">(</span><span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">args</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
 <dd>
@@ -1568,7 +1579,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-06-13 14:28:24 UTC</small>
+        <small>Made with Nim. Generated: 2019-06-19 09:38:54 UTC</small>
       </div>
     </div>
   </div>
