--- a/cx.html
+++ b/cx.html
@@ -99,6 +99,23 @@ input#searchInput {
   width: 80%;
 }
 
+/*
+ * Some custom formatting for input forms.
+ * This also fixes input form colors on Firefox with a dark system theme on Linux.
+ */
+input {
+  -moz-appearance: none;
+  color: #333;
+  background-color: #f8f8f8;
+  border: 1px solid #aaa;
+  font-family: "Lato", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
+  font-size: 0.9em;
+  padding: 6px;
+}
+input:focus {
+  border: 1px solid #1fa0eb;
+  box-shadow: 0 0 2px #1fa0eb;
+}
 
 /* Docgen styles */
 /* Links */
@@ -817,7 +834,7 @@ function main() {
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Benchmarkres"
-    title="Benchmarkres = tuple[bname, cpu, epoch, repeats: string]"><wbr />Benchmarkres<span class="attachedType"></span></a></li>
+    title="Benchmarkres = tuple[bname, cpu, epoch, gett, repeats: string]"><wbr />Benchmarkres<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -1011,7 +1028,7 @@ Version     : 1.0.0
 
 ProjectStart: 2015-06-20
 
-Latest      : 2019-06-11
+Latest      : 2019-07-13
 
 Compiler    : Nim &gt;= 0.19.x devel branch
 
@@ -1119,7 +1136,7 @@ Funding     : Here are three excellent reasons :
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
 <a id="Benchmarkres"></a>
-<dt><pre><a href="cx.html#Benchmarkres"><span class="Identifier">Benchmarkres</span></a> <span class="Other">=</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">bname</span><span class="Other">,</span> <span class="Identifier">cpu</span><span class="Other">,</span> <span class="Identifier">epoch</span><span class="Other">,</span> <span class="Identifier">repeats</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="cx.html#Benchmarkres"><span class="Identifier">Benchmarkres</span></a> <span class="Other">=</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">bname</span><span class="Other">,</span> <span class="Identifier">cpu</span><span class="Other">,</span> <span class="Identifier">epoch</span><span class="Other">,</span> <span class="Identifier">gett</span><span class="Other">,</span> <span class="Identifier">repeats</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -1258,7 +1275,7 @@ Funding     : Here are three excellent reasons :
 
 </dd>
 <a id="showBench"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#showBench"><span class="Identifier">showBench</span></a><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#showBench"><span class="Identifier">showBench</span></a><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>showBench</p>
@@ -1822,7 +1839,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-02 04:41:46 UTC</small>
+        <small>Made with Nim. Generated: 2019-07-13 07:20:36 UTC</small>
       </div>
     </div>
   </div>
