--- a/cxglobal.html
+++ b/cxglobal.html
@@ -823,6 +823,8 @@ function main() {
     </select>
   </div>
   <ul class="simple simple-toc" id="toc-list">
+<li><a class="reference" id="getterminalwidth_toc" href="#getterminalwidth">getTerminalWidth</a></li>
+<li><a class="reference" id="getterminalheight_toc" href="#getterminalheight">getTerminalHeight</a></li>
 <li>
   <a class="reference reference-toplevel" href="#6" id="56">Imports</a>
   <ul class="simple simple-toc-section">
@@ -883,10 +885,6 @@ function main() {
     title="cxtoLower(c: char): char"><wbr />cxto<wbr />Lower<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#isNumeric%2Cstring"
     title="isNumeric(s: string): bool"><wbr />is<wbr />Numeric<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#getTerminalWidth"
-    title="getTerminalWidth(): int"><wbr />get<wbr />Terminal<wbr />Width<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#getTerminalHeight"
-    title="getTerminalHeight(): int"><wbr />get<wbr />Terminal<wbr />Height<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#remapIntToFloat%2Cseq%5BT%5D%5Bint%5D"
     title="remapIntToFloat(s: seq[int]): seq[float]"><wbr />remap<wbr />Int<wbr />To<wbr />Float<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#remapFloatToInt%2Cseq%5BT%5D%5Bfloat%5D"
@@ -1115,7 +1113,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-06-30
+Latest      : 2019-07-18
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1220,23 +1218,7 @@ issues n newLines , default = 1
 <dd>
 
 
-
-</dd>
-<a id="getTerminalWidth"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#getTerminalWidth"><span class="Identifier">getTerminalWidth</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>getTerminalWidth</p>
-<p>get linux terminal width in columns a terminalwidth function is now incorporated in Nim dev after 2016-09-02 which maybe is slightly slower than the one presented here </p>
-
-
-</dd>
-<a id="getTerminalHeight"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#getTerminalHeight"><span class="Identifier">getTerminalHeight</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>getTerminalHeight</p>
-<p>get linux terminal height in rows </p>
+<h1><a class="toc-backref" id="getterminalwidth" href="#getterminalwidth">getTerminalWidth</a></h1><p># # get linux terminal width in columns # a terminalwidth function is now incorporated in Nim dev after 2016-09-02 # which maybe is slightly slower than the one presented here #</p>
 
 
 </dd>
@@ -1438,7 +1420,7 @@ getRndBool
 <dd>
 
 <p>ff</p>
-<p>formats a float to string with n decimals if thousands seperators are requirewd use f2 </p>
+<p>formats a float to string with n decimals if thousands seperators are requirewd use ff2 </p>
 
 
 </dd>
@@ -1602,7 +1584,7 @@ note that not all unicode chars may be available on all systems</pre>
 
 </dd>
 <a id="centerX"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#centerX"><span class="Identifier">centerX</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#centerX"><span class="Identifier">centerX</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>centerX</p>
@@ -1611,7 +1593,8 @@ note that not all unicode chars may be available on all systems</pre>
 
 </dd>
 <a id="centerPos,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#centerPos%2Cstring"><span class="Identifier">centerPos</span></a><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#centerPos%2Cstring"><span class="Identifier">centerPos</span></a><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
+                               <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>centerpos</p>
@@ -1937,7 +1920,9 @@ returns input string  n times mimicking python
 <dt><pre><span class="Keyword">template</span> <a href="#tw.t"><span class="Identifier">tw</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
 
-tw , a global where latest terminal width is always available
+
+<h1><a class="toc-backref" id="getterminalheight" href="#getterminalheight">getTerminalHeight</a></h1><p># # get linux terminal height in rows #</p>
+
 
 </dd>
 <a id="th.t"></a>
@@ -2241,7 +2226,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-13 07:20:46 UTC</small>
+        <small>Made with Nim. Generated: 2019-07-18 00:32:58 UTC</small>
       </div>
     </div>
   </div>
