--- a/cxglobal.html
+++ b/cxglobal.html
@@ -823,8 +823,6 @@ function main() {
     </select>
   </div>
   <ul class="simple simple-toc" id="toc-list">
-<li><a class="reference" id="getterminalwidth_toc" href="#getterminalwidth">getTerminalWidth</a></li>
-<li><a class="reference" id="getterminalheight_toc" href="#getterminalheight">getTerminalHeight</a></li>
 <li>
   <a class="reference reference-toplevel" href="#6" id="56">Imports</a>
   <ul class="simple simple-toc-section">
@@ -1217,8 +1215,6 @@ issues n newLines , default = 1
 <dt><pre><span class="Keyword">proc</span> <a href="#isNumeric%2Cstring"><span class="Identifier">isNumeric</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
-<h1><a class="toc-backref" id="getterminalwidth" href="#getterminalwidth">getTerminalWidth</a></h1><p># # get linux terminal width in columns # a terminalwidth function is now incorporated in Nim dev after 2016-09-02 # which maybe is slightly slower than the one presented here #</p>
 
 
 </dd>
@@ -1920,9 +1916,7 @@ returns input string  n times mimicking python
 <dt><pre><span class="Keyword">template</span> <a href="#tw.t"><span class="Identifier">tw</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
 
-
-<h1><a class="toc-backref" id="getterminalheight" href="#getterminalheight">getTerminalHeight</a></h1><p># # get linux terminal height in rows #</p>
-
+tw , a global where latest terminal width is always available
 
 </dd>
 <a id="th.t"></a>
@@ -2226,7 +2220,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-18 00:32:58 UTC</small>
+        <small>Made with Nim. Generated: 2019-07-18 00:37:31 UTC</small>
       </div>
     </div>
   </div>
